--- a/EscapeRecruitmentRoom/EscapeRecruitmentRoom.Presentation/View/RoomView.xaml
+++ b/EscapeRecruitmentRoom/EscapeRecruitmentRoom.Presentation/View/RoomView.xaml
@@ -70,6 +70,11 @@
                 Command="{Binding Logout}"
                 Content="Logout"
                 Focusable="False" />
+            <Button
+                Margin="5"
+                Command="{Binding Solution}"
+                Content="Solve"
+                Focusable="False" />
         </StackPanel>
 
         <ItemsControl
